dhall/tests/type-errors/unit/FunctionApplicationIsNotFunction.txt
 --> 1:1
  |
1 | True True␊
  | ^--^
  |
  = Type error: Not a function
